--- a/Patient.Api/Patient.Api/Components/Layout/Doctor/DoctorMenu.razor
+++ b/Patient.Api/Patient.Api/Components/Layout/Doctor/DoctorMenu.razor
@@ -49,7 +49,7 @@
                     <li><a class="Moje Konto" href="/lekarz">Moje konto</a></li>
                     <li><a class="Wyloguj się" href="#">Wyloguj sie</a></li>
                 </ul>
-            </div>da
+            </div>
         </div>
     </div>
 </div>
